--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <style>
     body {
-      background-image: url('images/background.jpeg');
+      background-image: url('images/background.jpg');
       opacity: 1.2;
     }
   </style>
@@ -32,7 +32,7 @@
 <p class = "content">
   <br>
   <strong>
-    Hello there! I am a 3rd Year ASU Student Majoring in Math and Computer Science with Cyber Security. Please feel free to contact me or check out my github!
+    Hello there! Nice to meet you, I am James Rausch.I am currently a  3rd Year ASU Student Majoring in Math and Computer Science with Cyber Security. Please feel free to contact me or check out my github!
   </strong>
 </p>
 </div>
