--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <style>
     body {
-      background-image: url('images/background.jpg');
+      background-image: url('images/back.gif');
       opacity: 1.2;
     }
   </style>
@@ -22,21 +22,38 @@
         My Github
       </button>
     </a>
-    <a target ="_blank" href = "https://mail.google.com/?view=cm&fs=1&to=jrausch5@asu.edu">
-      <button class = "contact">
-        Contact Me
+    <a target ="_blank" href = "aboutme.html">
+      <button class = "github">
+        About Me
       </button>
     </a>
+<a target = "_blank" href = "rausch_james_resume.pdf">
+	<button class ="github">
+	My Resume
+	</button>
+</a>
   </div>
 <div>
 <p class = "content">
   <br>
   <strong>
-    Hello there! Nice to meet you, I am James Rausch.I am currently a  3rd Year ASU Student Majoring in Math and Computer Science with Cyber Security. Please feel free to contact me or check out my github!
+    James Rausch
   </strong>
 </p>
 </div>
 
 </body>
+<footer id = "footer">
+<div class = "connect">
+<style> bottom: 100%; </style>
+<a target ="_blank" href ="https://mail.google.com/?view=cm&fs=1&to=jrausch5@asu.edu">
+<img src ="images/email.png" height = "35" width = "50" bottom = "0"  alt = "Email" class = "images"><style> body {
+bottom: 100%; } </style></a>
 
+<a target ="_blank" href = "https://linkedin.com/in/jamesrausch"> <img src ="images/link.png" height = "35" width = "50" alt = "Linkedin" class = "images"> </a>
+<a target = "_blank" href ="tel:4803824866">
+<img src = "images/callme.png" height = "35" width = "50" alt = "Call" class ="images"></a>
+</div>
+</footer>
 </html>
+
